fixed gap after question box

--- a/V2/assets/css/style.css
+++ b/V2/assets/css/style.css
@@ -15,11 +15,6 @@ body {
     background-color: green;
 }
 
-
-#headerBox {
-    background-color: red;
-}
-
 button {
     margin-left: 5px;
     margin-right: 5px;
@@ -35,17 +30,19 @@ button {
     background-color: orchid;
     padding-top: 35px;
     padding-bottom: 35px;
+    margin: 0px;
 }
 
 #answerBox {
     background-color: blueviolet;
     padding-top: 35px;
     padding-bottom: 35px;
+    margin-bottom: 100px;
 }
 
 #imageBox {
     background-color: black;
     padding-top: 35px;
     padding-bottom: 35px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
